#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(IBR-DTN, SVN, morgenro@ibr.cs.tu-bs.de)
AC_CONFIG_SRCDIR([src/daemon/Main.cpp])
AC_CONFIG_HEADER([include/ibrdtn/config.h])

# Checks for programs.
abi_save_CFLAGS="$CFLAGS"
abi_save_CXXFLAGS="$CXXFLAGS"

AC_PROG_CXX
AC_PROG_CC

CFLAGS="$abi_save_CFLAGS"
CXXFLAGS="$abi_save_CXXFLAGS"

AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AC_CHECK_LIB([sqlite3], [sqlite3_open])
AC_CHECK_LIB([rt], [clock_gettime])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netinet/in.h stddef.h sys/ioctl.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

AC_C_CONST
AC_C_INLINE
AC_C_VOLATILE

AC_TYPE_SSIZE_T
AC_TYPE_SIZE_T
AC_TYPE_INT64_T
AC_TYPE_INT32_T
AC_TYPE_INT16_T
AC_TYPE_UINT64_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

AC_STRUCT_TM
AC_PROG_GCC_TRADITIONAL

# Checks for library functions.
AC_FUNC_MKTIME
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero clock_gettime floor gethostname memset socket sqrt])

dnl -----------------------------------------------
dnl check for pthread library
dnl -----------------------------------------------

PTHREAD_CFLAGS=""
PTHREAD_LIBS="-mt -pthread"

AC_CHECK_LIB(pthread,pthread_create)

AC_CHECK_LIB(pthread,pthread_condattr_setclock,[
	AC_DEFINE(HAVE_PTHREAD_CONDATTR_SETCLOCK, [1], ["pthread clocking"])
])
AC_CHECK_LIB(pthread,pthread_setconcurrency,[
	AC_DEFINE(HAVE_PTHREAD_SETCONCURRENCY, [1], ["pthread concurrency"])
])

AC_CHECK_LIB(pthread,pthread_yield,[
	AC_DEFINE(HAVE_PTHREAD_YIELD, [1], ["pthread yield"],[
		AC_CHECK_LIB($tlib,pthread_yield_np,[
			AC_DEFINE(HAVE_PTHREAD_YIELD_NP, [1], ["pthread yield np"])
		])
	])
])

AC_CHECK_LIB(pthread,pthread_delay,[
	AC_DEFINE(HAVE_PTHREAD_DELAY, [1], ["pthread delay"])
])
AC_CHECK_LIB(pthread,pthread_delay_np,[
	AC_DEFINE(HAVE_PTHREAD_DELAY_NP, [1], ["pthread delay np"])
])
AC_CHECK_LIB(pthread,pthread_setschedprio,[
	AC_DEFINE(HAVE_PTHREAD_SETSCHEDPRIO, [1], ["pthread scheduling"])
])

dnl -----------------------------------------------
dnl debugging switches
dnl -----------------------------------------------

AC_ARG_ENABLE([debug],
	[AC_HELP_STRING([--enable-debug], [enable extra debugging output [default=no]])],
	[
		AC_DEFINE([DO_DEBUG_OUTPUT], [], [Define to enable extra debugging output.])
		CXXFLAGS="$CXXFLAGS -ggdb"
	], [
		CXXFLAGS="$CXXFLAGS -O3"
	])
	
AC_ARG_ENABLE([extended-debug],
	[AC_HELP_STRING([--enable-extended-debug], [enable extended debugging output [default=no]])],
	[AC_DEFINE([DO_EXTENDED_DEBUG_OUTPUT], [], [Define to enable extended debugging output.])],
	[])

dnl -----------------------------------------------
dnl put all flags together
dnl -----------------------------------------------

CXXFLAGS="$CXXFLAGS $PTHREAD_CFLAGS"
LDFLAGS="$LDFLAGS $PTHREAD_LIBS"

	
dnl -----------------------------------------------
dnl Generates Makefile's, configuration files and scripts
dnl -----------------------------------------------

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([ibrcommon])
AC_OUTPUT
