AC_INIT(ibrdtnsuite, m4_normalize(m4_include([version.inc])))
AC_CONFIG_SRCDIR(daemon/src/Main.cpp)
AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])
LT_INIT

export ibrcommon_CFLAGS="-I$(pwd)/ibrcommon"
export ibrcommon_LIBS="-L$(pwd)/ibrcommon/ibrcommon/.libs -librcommon"
export ibrdtn_CFLAGS="-I$(pwd)/ibrdtn"
export ibrdtn_LIBS="-L$(pwd)/ibrdtn/ibrdtn/.libs -librdtn"

AC_CONFIG_SUBDIRS(ibrcommon ibrdtn daemon tools)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
